--- a/base/html/common/paging.html
+++ b/base/html/common/paging.html
@@ -1,26 +1,23 @@
-<div class="btn-prev-angle">
-  <button type="button"><span class="screen-out">맨앞</span></button>
-  <button type="button"><span class="screen-out">이전</span></button>
-</div>
+<a href="#" class="btn-first"><span class="screen-out">맨앞</span></a>
+<a href="#" class="btn-prev"><span class="screen-out">이전</span></a>
 <a href="#">1</a>
 <a href="#">2</a>
 <a href="#">3</a>
 <a href="#">4</a>
 <a href="#">5</a>
-<a href="#">5</a>
 <a href="#">6</a>
 <a href="#">7</a>
 <a href="#">8</a>
+<a href="#">9</a>
 <a href="#">10</a>
-<div class="btn-next-angle">
-  <button type="button"><span class="screen-out">다음</span></button>
-  <button type="button"><span class="screen-out">맨끝</span></button>
-</div>
+<a href="#" class="btn-next"><span class="screen-out">다음</span></a>
+<a href="#" class="btn-end"><span class="screen-out">맨끝</span></a>
 <div class="selectbox-wrap primary">
   <select>
+    <option value="">12</option>
     <option value="">20</option>
     <option value="">30</option>
-    <option value="">40</option>
+    <option value="">50</option>
   </select>
 </div>
 <!-- //selectbox-wrap -->
