교차로-시스템관리: 연동제어관리 목록 및 팝업 작업

--- a/base/html/index.html
+++ b/base/html/index.html
@@ -532,7 +532,7 @@
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/linkage_list.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -546,7 +546,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/linkage_view.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -560,7 +560,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/linkage_add.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -573,6 +573,76 @@
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/linkage_edit.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete="완료"></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth">sw 연동 관리</td>
+                          <td class="col-4depth">sw 연동 관리 목록</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type=""></td>
+                          <td class="col-url">html/sw_list.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete=""></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth">sw 연동 관리 상세</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type="모달팝업"></td>
+                          <td class="col-url">html/sw_view.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete=""></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth">sw 연동 관리 추가</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type="모달팝업"></td>
+                          <td class="col-url">html/sw_add.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete=""></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth">sw 연동 관리 수정</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type="모달팝업"></td>
+                          <td class="col-url">html/sw_edit.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete=""></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth">연계 카메라 등록</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type="모달팝업"></td>
+                          <td class="col-url">html/sw_camera_register.html</td>
                           <!-- <td class="col-date"></td> -->
                           <td class="col-complete" data-complete=""></td>
                           <!-- <td class="col-worker"></td> -->
