교차로 상세 탭 js 수정

--- a/base/html/index.html
+++ b/base/html/index.html
@@ -588,7 +588,7 @@
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/sw_list.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -602,7 +602,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/sw_view.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -616,7 +616,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/sw_add.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -630,7 +630,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/sw_edit.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -644,7 +644,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/sw_camera_register.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
